# Arithmetic

./: CMakeLists.txt  Readme.txt  tmptest.cpp
input_example/: matrix1.txt  matrix2.txt
lib/: Matrix.cpp  Matrix.hpp  Matrix_column_coord.hpp  Matrix_coords.hpp  Matrix_proxy.hpp  Matrix_row_coord.hpp  Rational_number.cpp  Rational_number.hpp  Vector.cpp  Vector.hpp
lib/except/: exceptions.hpp
lib/test/: Matrix_test.cpp  Rational_number_test.cpp
